# movement-rfid-security

./: .gitignore  sdkconfig
.github/workflows/: terraform.yml  tests.yml  triggers.yml
components/movement-driver/: CMakeLists.txt  movement-driver.c
components/mqtt-aws/: CMakeLists.txt  mqtt-aws.c
components/mqtt-aws/certs/: certificate.pem.crt  private.pem.key
components/mqtt-aws/include/: mqtt-aws.h
components/wifi-driver/: CMakeLists.txt  idf_component.yml  wifi-driver.c
components/wifi-driver/include/: wifi-driver.h
infrastructure/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infrastructure/modules/iam/: main.tf  variables.tf
infrastructure/modules/iot-core/: main.tf
infrastructure/modules/iot-rules/: main.tf  outputs.tf  variables.tf
infrastructure/modules/s3/: main.tf
infrastructure/modules/sns/: main.tf  outputs.tf  variables.tf
main/: CMakeLists.txt  main.c
tests/host/: CMakeLists.txt  stub_driver_gpio.c  stub_esp_err.c  stub_esp_log.c  stub_freertos.c
tests/host/include/: stub_freertos.h  testing.h
tests/host/test/: test.c
tests/integration/: test_integration.c
